fix center alignment slideshow image

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1195,6 +1195,9 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
     background: #BA6016;
 }
 .slideshow_box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 80vh;
 }
 /* ------------------------------------------------------------- RESPONSIVE ------------------------------------------ */
